# Media-Downloader

./: .gitignore  .replit  API_DOCS_EN.md  API_DOCS_FA.md  INSTAGRAM_API_DOCS.md  README.md  README_EN.md  README_FA.md  README_fa.md  cleanup.py  database.py  locales.py  main.py  pyproject.toml  replit.md
attached_assets/: Pasted-Additionally-incorporate-the-following-improvements-and_1765980566543.txt  Pasted-Create-a-complete-production-ready-and-easy-to-deploy-b_1765980275708.txt  Pasted-You-are-a-senior-backend-architect-and-API-designer-I-h_1766045591752.txt
bot/: __init__.py  core.py  handlers.py
doc/: API_DOCS.md
static/: index.html
static/admin/: index.html
static/admin/css/: style.css
static/admin/js/: app.js
static/css/: style.css
static/js/: api.js  ui.js
